test/types/records/init/init-post-postinit.good
init-post-postinit.chpl:12: error: explicit calls to postinit() on anything other than 'this' or 'super' are not allowed
init-post-postinit.chpl:13: error: explicit calls to init() on anything other than 'this' or 'super' are not allowed
init-post-postinit.chpl:14: error: explicit calls to postinit() on anything other than 'this' or 'super' are not allowed
